[BZ141373] Fixing non-localized string for SQL Model-JDBC Connection profile

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -11,3 +11,4 @@ driverPWD = Password
 org.eclipse.datatools.connectivity.db.driverCategory = Database
 org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
 databases.category = Databases
+generic.profile.name = SQL Model-JDBC Connection
