--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -11,7 +11,7 @@
             category="org.eclipse.datatools.connectivity.db.category"
             icon="icons/jdbc_16.gif"
             id="org.eclipse.datatools.connectivity.db.generic.connectionProfile"
-            name="SQL Model-JDBC Connection"
+            name="%generic.profile.name"
             pingFactory="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
             propertiesPersistenceHook="org.eclipse.datatools.connectivity.db.generic.GenericDBPropertiesPersistenceHook"/>
       <connectionFactory
