--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -257,7 +257,7 @@
          point="org.eclipse.ui.navigator.navigatorContent">
       <navigatorContent
             contentProvider="org.eclipse.datatools.connectivity.ui.dse.views.ConnectionProfileContentProvider"
-            icon="platform:/plugin/org.eclipse.datatools.connectivity.dsexplorer/icons/full/cview16/enterprise_explorer.gif"
+            icon="icons/full/cview16/enterprise_explorer.gif"
             id="org.eclipse.datatools.connectivity.dsexplorer.content"
             labelProvider="org.eclipse.datatools.connectivity.ui.dse.views.ConnectionProfileLabelProvider"
             name="%DSE.content"
@@ -288,6 +288,7 @@
                <adapt type="org.eclipse.datatools.connectivity.ICategory"/>
                <adapt type="org.eclipse.datatools.connectivity.IConnectionProfile"/>
                <adapt type="org.eclipse.datatools.connectivity.ProfileManager"/>
+               <instanceof value="org.eclipse.core.resources.IWorkspaceRoot"/>
             </or>
          </enablement>
       </navigatorContent>
