*** empty log message ***

--- a/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql.dbdefinition/plugin.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     Versant Corporation - initial API and implementation
 ###############################################################################
-pluginName=DBDefinition Mysql Plug-in
+pluginName=Eclipse Data Tools Platform MySQL Database Definition Plug-in
 providerName=Eclipse.org
 4.0_ProductString = MySql
 4.0_VersionString = 4.0
