--- a/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql/plugin.properties
@@ -8,5 +8,5 @@
 # Contributors:
 #     Versant Corporation - initial API and implementation
 ###############################################################################
-pluginName=RDB Mysql Plug-in
+pluginName=Eclipse Data Tools Platform MySQL enablement plug-in
 providerName=Eclipse.org
