[144647] CheckIn:Fix bugzilla bug 144647 TVT3.2:TCT797: DE : Birt : Title "Select Table" in English

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/plugin.properties
@@ -26,6 +26,7 @@ wizard.window.title=New Flat File Data Source Profile
 wizard.data.source.page.title=Select Folder
 profile.propertypage.name=ODA Flat File Data Source Connection Properties
 wizard.data.set.page.title=Select Columns
+wizard.data.set.title=Select Table
 #
 #  Below NLS messages apply to all ODA data sources; should be re-factored
 #
