[BZ141373] Fixing non-localized string for SQL Model-JDBC Connection profile wizard

--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.xml
@@ -7,7 +7,7 @@
             class="org.eclipse.datatools.connectivity.db.generic.ui.NewConnectionProfileWizard"
             icon="icons/new_db_element.gif"
             id="org.eclipse.datatools.connectivity.db.generic.ui.NewConnectionProfileWizard"
-            name="SQL Model-JDBC Connection"
+            name="%wizard.name"
             profile="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
    </extension>
    <extension
