--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
@@ -2,3 +2,4 @@
 Bundle-Vendor = Eclipse.org
 Bundle-Name = Eclipse Data Tools Platform Generic DB UI Plug-in
 page.name.jdbcConnectionProperties = JDBC Connection Properties
+wizard.name = SQL Model-JDBC Connection
