144660 - Added property for datatools.core.ui.modelexplorer.bookmarkDecoration , that ledunnel provided

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -110,6 +110,7 @@ datatools.core.ui.model.editor = SQL Model Editor
 datatools.core.ui.modelexplorer.modelExplorerColumnDecoration = Data Tools - Column Data Type
 datatools.core.ui.modelexplorer.modelExplorerForeignKeyDecoration = Data Tools - Foreign or Primary Key Indicator
 datatools.core.ui.modelexplorer.DependencyDecoration = Data Tools - Dependency Decoration
+datatools.core.ui.modelexplorer.bookmarkDecoration  = Data Tools - Bookmark Indicator
 
 #
 ## Model Explorer Sorter Provider
