[126844] dynamically respond to changes made to filter settings.

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
@@ -18,3 +18,4 @@ DDLReverseEngineeringExtensionPointName=DDL Reverse Engineering
 ForwardEngineeringExtensionPointName=Forward Engineering
 CatalogExtensionPointName=Database Catalog
 DatabaseRecognition=Database Recognition
+FilterProfileExtensionName=SQL Model Filter Settings
