--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.xml
@@ -81,5 +81,9 @@
             id="org.eclipse.datatools.connectivity.sqm.internal.core.connection.ConnectionInfo"
             name="SQL Model Connection"
             factory="java.sql.Connection"/>
+      <profileExtension
+            id="org.eclipse.datatools.connectivity.sqm.filterSettings"
+            name="%FilterProfileExtensionName"
+            profile="org.eclipse.datatools.connectivity.db.generic.connectionProfile"/>
    </extension>
 </plugin>
