Update build.properties for DTP 0.9RC5 build

--- a/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                .,\
                genericdb.jar,\
                META-INF/,\
-               about.html
+               about.html,\
+               plugin.properties
 
 src.dir =		src/
 plugin.version =	0.9.0.200605101
