[BZ141332] Fixing formatting issue with version info for profiles in DSE

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -86,4 +86,4 @@ CPVersionPropertyPage.desc=Version information for {0}.\nThis information was ob
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileSummaryPage.button.testConnection=&Test Connection
-CommonLabelProviderBase.label.version=v.
+CommonLabelProviderBase.label.version={0} ({1} v. {2}) 
