--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -92,6 +92,5 @@ error.contentExtension =Error connecting to the "{0}" extension on profile "{1}"
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
-ConnectionProfileLabelProvider.label.versionIndicator=v.
-
+ConnectionProfileLabelProvider.label.versionIndicator={0} ({1} v. {2}) 
 DSE.Refresh.label = Ref&resh
