--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -3,7 +3,7 @@ category.datatools.description=Database development tools
 DatabaseManagement.command.explain=Get Execution Plan
 DatabaseManagement.command.execute=Execute All
 DatabaseManagement.command.execute.select=Execute Selected Text
-DatabaseManagement.ToggleComment=Togg&le Comment
+DatabaseManagement.ToggleComment=Toggle Comment
 
 sqlEditorName=SQL Editor
 
