--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
@@ -1,6 +1,8 @@
 Routineeditor.edit= &Edit...
 Routineeditor.run= &Run...
 
+Routineeditor.command.run= Run
+
 Routineeditor.name=Routine Editor
 
 routine.launch.type=Eclipse Data Tools
