[148749] Provide accelerators in oda flatfile designer dialogs

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/plugin.properties
@@ -14,6 +14,8 @@ plugin.name=DTP ODA Flat File Run-time Driver
 datasource.name=Flat File Data Source
 dataset.name=Flat File Data Set
 
-datasource.property.home=Home Folder
-datasource.property.charset=Character Set
-datasource.property.incltypeline=Includes Data Type (Yes/No)
+datasource.property.home=Home &Folder
+datasource.property.charset=&Character Set
+datasource.property.incltypeline=Use Second Line as &Data Type Indicator
+property.value.yes=Yes
+property.value.no=No
