--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -28,13 +28,18 @@
             id="org.eclipse.datatools.connectivity.db.driverCategory"
             name="%org.eclipse.datatools.connectivity.db.driverCategory"/>
    
+      <category
+            parentCategory="org.eclipse.datatools.connectivity.db.driverCategory"
+            name="%org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate"
+            id="org.eclipse.datatools.connectivity.db.genericDriverCategory"/>
+
       <driverTemplate
             createDefault="false"
             emptyJarListIsOK="false"
             id="org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate"
             jarList=""
             name="%org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate"
-            parentCategory="org.eclipse.datatools.connectivity.db.driverCategory">
+            parentCategory="org.eclipse.datatools.connectivity.db.genericDriverCategory">
          <properties>
             <property
                   generated="false"
