[154168] Integrate DSE with properties view.  Also fixed some bugs found in Dis/ConnectAction's.

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -36,3 +36,5 @@ DSE.content = Data Source Explorer Extension
 
 category.name.dataTools = SQL Development
 category.name.connectivity = Connectivity
+
+General = General
