[154168] Added type name to properties list for connection profile objects.  Implemented description method for base content provider (affecting IConnectionProfile and ICategory objects).

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -87,3 +87,5 @@ CPVersionPropertyPage.label.versionUnavailable=Version information is unavailabl
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileSummaryPage.button.testConnection=&Test Connection
 CommonLabelProviderBase.label.version={0} ({1} v. {2}) 
+
+properties.connectionprofile.type = Profile Type
