--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -66,4 +66,12 @@
          </enablement>
       </actionProvider>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.eclipse.datatools.modelbase.sql.schema.SQLObject"
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.SQLObjectAdapterFactory">
+         <adapter type="org.eclipse.ui.views.properties.IPropertySource"/>
+      </factory>
+   </extension>
 </plugin>
