--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -89,3 +89,4 @@ ConnectionProfileSummaryPage.button.testConnection=&Test Connection
 CommonLabelProviderBase.label.version={0} ({1} v. {2}) 
 
 properties.connectionprofile.type = Profile Type
+DSE.Refresh.label = Ref&resh
