BZ155702-fixed three errant actions

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -51,7 +51,7 @@
                toolbarPath="slotn"
                id="org.eclipse.datatools.connectivity.internal.ui.viewactions.addserver"
                hoverIcon="icons/connection1_newwiz.gif"
-               class="org.eclipse.datatools.connectivity.ui.dse.actions.AddProfileViewAction"
+               class="org.eclipse.datatools.connectivity.ui.actions.AddProfileViewAction"
                icon="icons/full/clcl16/add_server.gif"
                label="%DSE.AddCP.label"
                menubarPath="slotn"
@@ -63,7 +63,7 @@
                toolbarPath="slot1"
                id="org.eclipse.datatools.connectivity.internal.ui.viewactions.export"
                hoverIcon="icons/full/clcl16/export.gif"
-               class="org.eclipse.datatools.connectivity.ui.dse.actions.ExportProfileViewAction"
+               class="org.eclipse.datatools.connectivity.ui.actions.ExportProfileViewAction"
                icon="icons/full/clcl16/export.gif"
                label="%DSE.Export.label"
                menubarPath="slot1"
@@ -75,7 +75,7 @@
                toolbarPath="slot1"
                id="org.eclipse.datatools.connectivity.internal.ui.viewactions.import"
                hoverIcon="icons/full/clcl16/import.gif"
-               class="org.eclipse.datatools.connectivity.ui.dse.actions.ImportProfileViewAction"
+               class="org.eclipse.datatools.connectivity.ui.actions.ImportProfileViewAction"
                icon="icons/full/clcl16/import.gif"
                label="%DSE.Import.label"
                menubarPath="slot1"
