--- a/tests/org.eclipse.datatools.sqltools.parsers.sql.query.test/plugin.xml
+++ b/tests/org.eclipse.datatools.sqltools.parsers.sql.query.test/plugin.xml
@@ -1,23 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
-<plugin
-   id="org.eclipse.datatools.sqltools.parsers.sql.query.test"
-   name="Test1 Plug-in"
-   version="0.9.0.200605101"
-   provider-name="Eclipse.org"
-   class="org.eclipse.datatools.sqltools.parsers.sql.query.test.TestPlugin">
+<plugin>
 
-   <runtime>
-      <library name="test.jar">
-         <export name="*"/>
-      </library>
-   </runtime>
-
-   <requires>
-      <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.datatools.sqltools.parsers.sql.test" export="true"/>
-      <import plugin="org.eclipse.datatools.sqltools.parsers.sql.query"/>
-      <import plugin="org.junit"/>
-   </requires>
-
+    
 </plugin>
