Adjust build properties

--- a/plugins/org.eclipse.datatools.enablement.postgresql.dbdefinition/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.postgresql.dbdefinition/build.properties
@@ -3,3 +3,9 @@ bin.includes = META-INF/,\
                runtime/,\
                plugin.xml,\
                about.html
+src.dir	= src/
+plugin.version =	1.0.0.200609131
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
