151040 (Enhance the content assist feature ) 151042 (Refactor the SQLParser API to make it thread safe) 151046 (Add more SQL editor context menu) 151048 (Add more preference pages ) 153550 (Listens to connection profile and connect events) 153551 (Allow SQLDevTools UI components to be customized) 144834 (SQLResultRunnable for UserDefinedFunction (UDF) not available) 156829 (Ad-hoc SQL not executed by vendor provided ExecutionService)

--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
@@ -2,7 +2,13 @@ Routineeditor.edit= &Edit...
 Routineeditor.run= &Run...
 
 Routineeditor.command.run= Run
+Routineeditor.command.debug= Debug
+DatabaseManagement.command.debug=Debug
 
 Routineeditor.name=Routine Editor
 
 routine.launch.type=Eclipse Data Tools
+
+DatabaseManagement.command.savetodb=Save to Database
+DatabaseManagement.command.refresh=Refresh from Database
+
