Tune the connection status

--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.xml
@@ -54,7 +54,7 @@
       </wizard>
    </extension>
    
-   <!-- preference pages -->
+   <!-- preference pages 
    <extension
          point="org.eclipse.ui.preferencePages">
       <page
@@ -63,6 +63,7 @@
             name="%datatools.preferences.sqlfile.name"
             id="org.eclipse.datatools.sqltools.internal.sqlscrapbook.preferences.sqlfile"/>
    </extension>
+   -->
    
    <extension
          point="org.eclipse.ui.commands">
