[151751,151758,152987] integrate catalog loaders with generic JDBC catalog elements, includes adding support for stored procedures udfs and udts within the generic JDBC catalog elements.  added support for Catalog objects

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -161,6 +161,7 @@ existingConnection = Connections Folder
 connectedConnection = Live Connection
 disconnectedConnection = Disconnected Connection
 cachedConnection = Cached Connection
+catalog = Catalog
 
 DEFAULT_SCHEMA_FILTER_PROPERTY_PAGE_NAME=Default Schema Filter
 DEFAULT_TABLE_FILTER_PROPERTY_PAGE_NAME=Default Table Filter
