BZ151757-enabled refactoring for connection profile operations (create, delete, duplicate, rename)

--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -90,3 +90,23 @@ CommonLabelProviderBase.label.version={0} ({1} v. {2})
 
 properties.connectionprofile.type = Profile Type
 DSE.Refresh.label = Ref&resh
+
+CPDeleteChange.name = Delete {0} Connection Profile
+CPDeleteChange.error.ProfileDoesNotExist = The connection profile you are trying to delete does not exist.
+CPDeleteChange.delete.failure = Failed to delete connection profile.
+CPDeleteProcessor.name = DTP Connectivity Delete Processor
+CPDuplicateProcessor.name = DTP Connectivity Duplicate Processor
+CPCopyChange.name = Duplicate {0} Connection Profile
+CPCopyChange.error.ProfileDoesNotExist = The connection profile you are trying to duplicate does not exist.
+CPCopyChange.title.error = Failed to duplicate connection profile.
+CPCreateChange.name = Create {0} Connection Profile
+CPCreateChange.error.NewProfileDoesNotHaveName = A name is required to create the new connection profile.
+CPCreateChange.error.NewProfileAlreadyExists = A connection profile with the new name already exists.
+CPCreateChange.error.NewProfileDoesNotHaveProviderID = A connection profile provider ID is required to create the new connection profile.
+CPCreateChange.error.NewProfileDoesNotHaveNonNullPropertiesObject = A non-null properties object is required to create the new connection profile.
+CPCreateChange.create.failure = Failed to create connection profile.
+CPCreateProcessor.name = DTP Connectivity Create Processor
+CPRenameChange.name = Rename {0} Connection Profile
+CPRenameProcessor.name = DTP Connectivity Rename Processor
+CPRenameChange.title.error = Failed to rename connection profile.
+ 
