[156017][Enablement]  Contribute an ODA XML Driver and Designer

--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/plugin.properties
@@ -12,8 +12,8 @@
 ###############################################################################
 # NLS String
 ###############################################################################
-oda.xml.datasource=XML DataSource
-oda.xml.dataset=XML DataSet
+oda.xml.datasource=DTP XML DataSource
+oda.xml.dataset=DTP XML DataSet
 oda.xml.tablemapping=Table Mapping
 oda.xml.columnmapping=Column Mapping
 
