--- a/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/plugin.properties
@@ -13,8 +13,8 @@
 ###############################################################################
 # NLS String
 ###############################################################################
-datasource.name=XML Data Source
-dataset.name=XML Data Set
+datasource.name=DTP XML Data Source
+dataset.name=DTP XML Data Set
 
 datasource.property.xmlFile=XML Data Source File
 datasource.property.schemaFile=XML Schema File
